# ci-calc

./: pyproject.toml
CI-Calculator-circleci-project-setup/: README.md  calculator.py  requirements.txt  test_calculator.py
